--- a/Django/enquete/templates/enquete/results.html
+++ b/Django/enquete/templates/enquete/results.html
@@ -1,4 +1,8 @@
-<html>
+<!DOCTYPE html>
+
+{% load static %}
+
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Enquete</title>
@@ -20,12 +24,18 @@
     </div>
 
     <div class="container">
-        <h3 class="text-center">Escolha uma enquete:</h3>
-        <ul class="list-unstyled">
-            {% for question in questions %}
-                <li><a href="{% url 'enquete:vote' question.id %}" class="menu-button">{{ question.question_text }}</a></li>
+        <h3 class="text-center">Resultado da enquete</h3>
+    </div>
+
+    <div class="container">
+        <ul>
+            {% for option in question.option_set.all %}
+                <li>{{ option.option_text }} -- {{ option.votes }}</li>
             {% endfor %}
         </ul>
+
+        <a href="{% url 'enquete:vote' question.id %}">Votar novamente?</a>
+        <a href="{% url 'enquete:index' %}">Ver outras questões?</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
