--- a/Django/enquete/templates/enquete/vote.html
+++ b/Django/enquete/templates/enquete/vote.html
@@ -7,7 +7,96 @@
     <meta charset="UTF-8">
     <title>Vote</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'enquete/style.css' %}">
+    <style>
+        .menu-button {
+        display: block;
+        padding: 10px;
+        margin-bottom: 10px;
+        background-color: #f8f9fa;
+        border: 1px solid #ced4da;
+        border-radius: 4px;
+        text-decoration: none;
+        color: #212529;
+        transition: background-color 0.3s;
+    }
+
+    .menu-button:hover {
+        background-color: #e9ecef;
+    }
+
+    body {
+        padding-top: 70px;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+
+    header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 100;
+    }
+
+    .navbar {
+        background-color: #000000 !important;
+    }
+
+    .navbar-brand {
+        color: #fff !important;
+    }
+
+    h1 {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    fieldset {
+        border: none;
+        padding: 0;
+    }
+
+    legend {
+        text-align: center;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    input[type="submit"] {
+        margin-top: 20px;
+    }
+
+    ul {
+        list-style: none;
+        padding-left: 0;
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    li {
+        margin-bottom: 10px;
+    }
+
+    a {
+        display: block;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .logo-container {
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .project-name {
+        color: #FF0000;
+        margin-top: 10px;
+    </style>
 </head>
 <body>
     <header>
@@ -19,8 +108,7 @@
     </header>
 
     <div class="logo-container">
-        <img src="{% static 'enquete/logo.png' %}" alt="Logo da Empresa">
-        <h2 class="project-name">Enquete</h2>
+        <h2 class="project-name">A Melhor Enquete De Todas.</h2>
     </div>
 
     <div class="container">
