--- a/Django/enquete/templates/enquete/results.html
+++ b/Django/enquete/templates/enquete/results.html
@@ -42,6 +42,7 @@
 
     .navbar {
         background-color: #000000 !important;
+        padding: 40px;
     }
 
     .navbar-brand {
@@ -102,7 +103,6 @@
     <header>
         <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
             <div class="container">
-                <a class="btn btn-secondary ml-auto" href="/admin">Admin</a>
             </div>
         </nav>
     </header>
