--- a/Django/enquete/templates/enquete/index.html
+++ b/Django/enquete/templates/enquete/index.html
@@ -4,6 +4,7 @@
     <title>Enquete</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
+
         .menu-button {
         display: block;
         padding: 10px;
@@ -38,6 +39,7 @@
 
     .navbar {
         background-color: #000000 !important;
+        padding: 40px;
     }
 
     .navbar-brand {
@@ -98,9 +100,7 @@
 <body>
     <header>
         <nav class="navbar navbar-fixed-top navbar-dark bg-primary">
-            <div class="container">
-                <a class="btn btn-secondary ml-auto" href="/admin">Admin</a>
-            </div>
+            <div class="container"></div>
         </nav>
     </header>
 
